--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,30 @@
-pytesseract
-opencv-python
-nltk
-flask
-flask_pymongo
-python-dotenv
+certifi==2023.5.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+click==8.1.3
+colorama==0.4.6
+cryptography==40.0.2
+cv==1.0.0
+dnspython==2.3.0
+Flask==2.2.3
+Flask-PyMongo==2.3.0
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+joblib==1.2.0
+MarkupSafe==2.1.2
+nltk==3.8.1
+numpy==1.24.2
+opencv-python==4.7.0.68
+packaging==23.0
+Pillow==9.4.0
+pycparser==2.21
+pymongo==4.3.3
+pyOpenSSL==23.1.1
+pytesseract==0.3.10
+python-dotenv==1.0.0
+regex==2022.10.31
+requests==2.30.0
+tqdm==4.64.1
+urllib3==2.0.2
+Werkzeug==2.2.3
