--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ numpy==1.24.2
 opencv-python==4.7.0.68
 packaging==23.0
 Pillow==9.4.0
+pyaspeller==1.1.0
 pycparser==2.21
 pymongo==4.3.3
 pyOpenSSL==23.1.1
